--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@ionic-native/core": "4.3.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "^2.0.1",
+    "cordova-sqlite-storage": "^2.0.4",
+    "es6-promise": "^4.1.1",
     "ionic-angular": "3.7.1",
     "ionicons": "3.0.0",
+    "isomorphic-fetch": "^2.2.1",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -34,5 +37,10 @@
     "@ionic/app-scripts": "3.0.1",
     "typescript": "2.3.4"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-sqlite-storage": {}
+    }
+  }
 }
